fix navbar wrap

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -17,6 +17,7 @@ a {
 
 .navbar {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin: 0 20% 0 20%;
   padding-top: 10px;
